feat: listing delete usecase
